<resources>
    <string name="app_name">ShareXela</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="facebook_app_id" translatable="false">550671982145537</string>
    <string name="editar_articulo_title">Editar Articulo</string>
    <string name="user_profile_title">Perfil de usuario</string>
    <string name="set_area_title">configuración de área</string>
    <string name="set_sex_title">Elección del género</string>
    <string name="set_mail_password_title">correo electrónico y contraseña</string>
    <string name="fail_crear_articulo">falló al crear el artículo.</string>
    <string name="fail_editar_articulo">falló al editar el artículo.</string>
    <string name="success_logOut">ha cerrado la sesión con éxito.</string>
    <string name="success_change_profile_image">La imagen ha sido cambiada.</string>
    <string name="fail_update_by_swipeRefresh">no pudo actualizar los datos.</string>
    <string name="fail_share_facebook">no se compartió en Facebook.</string>
    <string name="fail_change_data" >no pudo cambiar los datos.</string>
    <string name="success_change_data" >La información cambió.</string>
    <string name="LOGIN_SHARED_PREFERENCES">LOGIN_SHARED_PREFERENCES</string>
    <string name="SP_KEY_AUTH_TOKEN">SP_AUTH_TOKEN</string>
    <string name="SP_KEY_LOGIN_STATUS">SP_LOGIN_STATUS</string>
    <string name="drawer_menu_signIn">Iniciar sesión</string>
    <string name="drawer_menu_signUp">Registro de usuario</string>
    <string name="drawer_menu_notification">Notificación</string>
    <string name="drawer_menu_myList">Mis avisos</string>
    <string name="drawer_menu_myFavorite">Mis favoritos</string>
    <string name="drawer_menu_crearArticulo">Crear un aviso</string>
    <string name="drawer_menu_profile">Perfil</string>
    <string name="drawer_menu_settings">Configuración</string>
    <string name="drawer_menu_others">Otros</string>
    <string name="drawer_menu_signOut">Cerrar sesión</string>
    <string name="drawer_menu_response_no_logIn">No conectado.</string>
    <string name="login_status_true">Ya iniciado sesión</string>
    <string name="ALL_GUATEMALA">Todos Articulos</string>
    <string name="toolbar_Main_title">Encuentra artículos</string>
    <string name="toast_message_no_article">No hubo artículo correspondiente.</string>
    <string name="fragment_detail_btn_text_btnFavorite">♡bueno</string>
    <string name="fragment_detail_btn_text_btnComment">Poner un Comentario</string>
    <string name="fragment_detail_TextView_tvDealAreaTitle">Lugar de entrega</string>
    <string name="fragment_detail_TextView_tvCategoryTitle">Categoría</string>
    <string name="fragment_detail_btn_text_btnTransaction">Ir a la página de transaccion</string>
    <string name="fragment_detail_btn_text_btnSolicitar">     Aplicar          </string>
    <string name="fragment_detail_btn_text_btnSolicitado">     Aplicado        </string>
    <string name="fragment_detail_btn_text_btnSelectSolicitudes">Elige un socio comercial</string>
    <string name="fragment_detail_btn_text_btnShowFail">Socio comercial determinado</string>
    <string name="fragment_detail_TextView_UsuarioInformacion">Informacion del usuario</string>
    <string name="fragment_detail_TextView_ItemPrice">Precio</string>
    <string name="toast_message_needSignIn">Por favor Iniciar sesión.</string>
    <string name="fragment_detail_btn_detail_active_to_deactive">Deje de publicar este artículo.</string>
    <string name="fragment_detail_btn_detail_active_to_active">Reanudar la publicación de este artículo.</string>
    <string name="fragment_detail_toast_message_applicado">Ya se ha solicitado.</string>
    <string name="title_activity_crear_articulo">Creación del artículo</string>
    <string name="toolbar_crearArticulo_title">Creación del artículo</string>
    <string name="fragment_crear_articulo_etArticuloTitle_hint">Título del artículo</string>
    <string name="fragment_crear_articulo_etArticuloDescription_hint">Descripción del articulo</string>
    <string name="fragment_crear_articulo_chooseCategory">Selección de categoría</string>
    <string name="fragment_crear_artivulo_btnCrearArticulo">Completa el articulo</string>
    <string name="fragment_crear_articulo_btnCrearArticuloLaunchMap">(opción)dirección</string>
    <string name="title_o_description_blank_message">No hay entrada en el título del artículo y la descripción del artículo. Por favor llenalo.</string>
    <string name="success_crear_articlo_message">Creó un artículo.</string>
    <string name="title_activity_solicitar">Solicitud</string>
    <string name="fragment_solicitar_message_making_btnSend">Enviar</string>
    <string name="fragment_log_in_inputLayout_hintEmail">Correo Electronico</string>
    <string name="fragment_log_in_inputLayout_hintPassword">Contraseña</string>
    <string name="fragment_log_in_btnLogIn">Iniciar sesión</string>
    <string name="title_activity_master">MasterActivity</string>
    <string name="toolbar_login_title">Iniciar sesión</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="login_success_message">se conectó.</string>
    <string name="login_fail_message">" La información de autenticación es incorrecta."</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="fragment_sign_up_inputLayout_hintEmail">Correo Electronico</string>
    <string name="fragment_sign_up_inputLayout_hintPassword1">Contraseña</string>
    <string name="fragment_sign_up_inputLayout_hintPassword2">Escriba la contraseña otra vez</string>
    <string name="fragment_sign_up_btnSignUp">Registro</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_signUp">Registro de usuario</string>
    <string name="fragment_get_coordinates_radius">alcance del negocio (m)</string>
    <string name="fragment_edit_profile_basic_inputLayout_hintUserName">Nombre de usuario</string>
    <string name="fragment_edit_profile_basic_inputLayout_hintDescription">Auto presentación</string>
    <string name="fragment_profile_list_username_and_description">Usuario y Descripcion</string>
    <string name="fragment_profile_list_area">Área de entrega</string>
    <string name="fragment_profile_list_mailadress_and_password">Correo Electronico y Contraseña</string>
    <string name="fragment_profile_list_sex">Género</string>
    <string name="fragment_profile_list_phone_number">Número de teléfono</string>
    <string name="fragment_profile_list_counfigured_sex">Ya está establecido</string>
    <string name="fragment_profile_list_no_counfigured_sex">unset</string>
    <string name="fragment_edit_mail_password_change_mailaddress">Cambio de correo electrónico</string>
    <string name="fragment_edit_mail_password_change_password">Cambia la contraseña</string>
    <string name="fragment_edit_mail_password_TextInputEditText_Email_hint">Correo Electronico</string>
    <string name="fragment_edit_mail_password_TextInputEditText_Current_password_hint">Contraseña actual</string>
    <string name="fragment_edit_mail_password_TextInputEditText_New_password_hint">Nueva contraseña</string>
    <string name="fragment_edit_mail_password_TextInputEditText_Confirm_password_hint">Repetir Ingresar nueva contraseña</string>
    <string name="fragment_edit_area_info_btn_btnSettingAreaByMap">establece desde el mapa.</string>
    <string name="fragment_edit_sex_rbMale_text">Hombre</string>
    <string name="fragment_edit_sex_rbFemale_text">Mujer</string>
    <string name="fragment_edit_sex_rbNoAnswer_text">Sin respuesta</string>
    <string name="fragment_edit_sex_description_text">El género no será publicado</string>
    <string name="title_activity_profile">Perfil</string>
    <string name="fragment_solicitar_decide_btnDecideSolicitar_text">Decidir sobre un socio comercial</string>
    <string name="fragment_solicitar_decide_tvTitleMessage">Mensaje</string>
    <string name="fragment_tag_choose_solicitud">choose_solicitud</string>
    <string name="fragment_tag_make_solicitud_message">make_solicitud_message</string>
    <string name="toast_message_no_input_message">Ningún mensaje ingresado</string>
    <string name="default_notification_channel_id" translatable="false">test</string>
    <string name="title_set_point_and_radius">Configurar ubicación comercial</string>
    <string name="notification_recyclerview_adapter_recieve_solicitud">"Se ha recibido una solicitud comercial.      "</string>
    <string name="notification_recyclerview_adapter_recieve_commento">"El artículo se comentó.                      "</string>
    <string name="notification_recyclerview_adapter_begin_transaction">"Empieza a comerciar.                         "</string>
    <string name="notification_recyclerview_adapter_recieve_message">"Ha recibido un mensaje de su socio comercial."</string>
    <string name="ADMOB_APP_ID" translatable="false">ca-app-pub-8726407510970827~4826767457</string>
    <string name="banner_ad_unit_id_test" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-8726407510970827/9887522441</string>
    <string name="allow">Aprobar</string>
    <string name="deny">Rechazar</string>
    <string name="deny_message">No va a funcionar porque no dio permiso.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sub_function">SubFunctionActivity</string>
    <string name="title_activity_others">OthersActivity</string>
    <string name="title_activity_direct_message">DirectMessageActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_item_contact">ItemContactActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_images">ImagesActivity</string>
    <string name="title_activity_sign_out">SignOutActivity</string>
    <string name="title_activity_fvorite_item">FvoriteItemActivity</string>
    <string name="title_activity_favorite_item">FavoriteItemActivity</string>
    <string name="fragment_detail_TextView_text_itemDescription">Descripción del articulo</string>
    <string name="tv_forget_password">Olvidó la contraseña</string>
    <string name="drawer_header_logOutStatus">no conectado</string>
    <string name="title_activity_home">HomeActivity</string>
    <string-array name="categoryList">
        <item>quiero donar o vender</item>
        <item>quiero buscar donante</item>
        <item>quiero avisar</item>
        <item>quiero buscar una habitación</item>
        <item>quiero alquilar una habitación</item>
        <item>quiero dar pensionado</item>
        <item>quiero buscar pensionista</item>
        <item>quiero buscar empleo</item>
        <item>quiero buscar trabajador</item>
        <item>publicidad de Enpresas y Servicios</item>
    </string-array>
</resources>