<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutProfileMailPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMailPasswordFragment" >

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/basicDivider16"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <View
                android:id="@+id/basicDivider18"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor"
                    android:paddingLeft="@dimen/startText"
                    android:paddingBottom="@dimen/titlePaddingBottom"
                    android:text="@string/fragment_edit_mail_password_change_mailaddress"
                    android:textColor="@color/colorAccent" />

                <View
                    android:id="@+id/divider38"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fragment_edit_mail_password_TextInputEditText_Email_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmailAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnChangeEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Cambiar EmailAddress" />

                <View
                    android:id="@+id/divider34"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />

            </LinearLayout>

            <View
                android:id="@+id/basicDivider19"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <View
                android:id="@+id/basicDivider27"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView29"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor"
                    android:paddingLeft="@dimen/startText"
                    android:paddingBottom="@dimen/titlePaddingBottom"
                    android:text="@string/fragment_edit_mail_password_change_password"
                    android:textColor="@color/colorAccent" />

                <View
                    android:id="@+id/divider37"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fragment_edit_mail_password_TextInputEditText_Current_password_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etCurrentPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewPassword1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/fragment_edit_mail_password_TextInputEditText_New_password_hint" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/fragment_edit_mail_password_TextInputEditText_Confirm_password_hint">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNewPassword2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnCambiarPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="CAMBIAR PASSWORD" />

                <View
                    android:id="@+id/divider36"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />


            </LinearLayout>

            <View
                android:id="@+id/basicDivider25"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <View
                android:id="@+id/basicDivider28"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView32"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/backgroundColor"
                    android:text="@string/tv_forget_password"
                    android:textColor="@color/colorAccent" />

                <View
                    android:id="@+id/divider39"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_forget_password" />

                <View
                    android:id="@+id/divider40"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/midium_span"
                    android:background="@android:drawable/screen_background_light_transparent" />
            </LinearLayout>

            <View
                android:id="@+id/basicDivider29"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />

            <View
                android:id="@+id/basicDivider30"
                android:layout_width="match_parent"
                android:layout_height="@dimen/basic_span"
                android:background="@color/backgroundColor" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>